--- a/templates/result.html
+++ b/templates/result.html
@@ -5,8 +5,7 @@
 		<meta charset="utf-8">
 		<title>Heart Disease Predictor</title>
 		<link rel="shortcut icon" href="{{ url_for('static', filename='logo.ico') }}">
-		<link rel="stylesheet" href="../static/styles.css?q=14587985">
-		<!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"> -->
+		<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='styles.css') }}">
 		<script src="https://kit.fontawesome.com/5f3f547070.js" crossorigin="anonymous"></script>
 		<link href="https://fonts.googleapis.com/css2?family=Pacifico&display=swap" rel="stylesheet">
 	</head>
