--- a/static/styles.css
+++ b/static/styles.css
@@ -41,39 +41,35 @@ body{
 .heading_font{
     color: #ffffff;
 	font-family: 'Pacifico', cursive;
-	font-size: 45px;
+	font-size: 35px;
 	font-weight: normal;
 }
 
 .description p{
-	font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
 	color: #ffffff;
     font-style: italic;
-    font-size: 14px;
-    margin: 5px -5px 0 0;
+    font-size: 20px;
+    margin: -5px 0 0;
 }
 
 /* Text Area */
 .ml-container{
-	margin: 50px;
-	align-self: center;
+    margin: 30px 0;
 	flex: 1 0 auto;
-	text-align: left;
+	
 }
 
 .form-input {
-	text-align: left;
-	
-	width: 500px;
-	height: 25px;
-	margin-top: 1px;
-	margin-bottom: 5px;
-	padding: 5px;
-	border-bottom: 1px;
-	border-style: groove;
-	
-}
+	text-align: center;
+	width: 75%;
+	height: 30%;
+	margin-bottom: 3%;
+	font-size: 14pt;
 
+}
+.p{
+	font-size: 16pt;
+}
 /* Predict Button */
 .my-cta-button{
 	background: #f9f9f9;
@@ -118,10 +114,9 @@ body{
 }
 
 .footer-description{
-	font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 	color: #ffffff;
 	margin: 0;
-	font-size: 18px;
+	font-size: 20px;
 }
 
 /* Result */
@@ -147,21 +142,3 @@ body{
     	margin: 10px 0;
 }
 
-.form-input1{
-	text-align: left;
-	margin-bottom: 10px;
-		
-}
-p{
-	font-weight: bold;
-	font-family:-apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
-	
-}
-.gyan{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    font-size: 18px;
-    margin-left: 36%;
-    align-self: center;
-    text-align: left;
-    margin-bottom: 20px;
-}
