--- a/templates/index.html
+++ b/templates/index.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="utf-8">
         <title>Heart Disease Predictor</title>
-        <link rel="shortcut icon" href="{{ url_for('static', filename='diabetes-favicon.ico') }}">
+        <link rel="shortcut icon" href="{{ url_for('static', filename='logo.ico') }}">
         <link rel="stylesheet" href="../static/styles.css?q=124898745">
         <!-- <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}"> -->
         <script src="https://kit.fontawesome.com/5f3f547070.js" crossorigin="anonymous"></script>
