--- a/static/styles.css
+++ b/static/styles.css
@@ -142,6 +142,25 @@ p{
 
 .gif1{
 	width: 35%;
-    	margin: 10px 0;
+    margin: 10px 0;
+}
+.gyan{
+	width: 50%;
+	height:50%;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 20px;
+    align-self: center;
+    text-align: left;
+    margin-left: 29%;
+    margin-bottom: 10px;
 }
 
+h2{
+	display: block;
+    font-size: 2em;
+    margin-block-start: 0.67em;
+    margin-block-end: 0.67em;
+    margin-inline-start: 0px;
+    margin-inline-end: 0px;
+    font-weight: bold;
+}
